--- a/TimelineMe/Views/CameraScenario.xaml
+++ b/TimelineMe/Views/CameraScenario.xaml
@@ -47,7 +47,7 @@
                 </StackPanel>
 
                 <CaptureElement Name="CamPreview" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="0,10,0,0" />
-                <Canvas Name="SnapshotCanvas" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0"/>
+                <MediaElement Name="PreviewMediaEle" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0"/>
             </Grid>
 
             <!-- Status Block for providing messages to the user.  Use the
